--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "feather-icons": "^4.29.2"
     }
 }
